sidebar wraper fixed

--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -253,7 +253,7 @@ body {
   max-height: 100%;
   position: fixed;
   top: 0;
-  left: -300px;
+  left: -550px;
   z-index: 4;
 }
 
